syntax = "proto3";
import "user.proto";
import "rpc_comm.proto";
package user.rpc;

message CreateUserReq { user.UserInfo userinfo = 1; }

message CreateUserRsp { uint64 uid = 1; }

message ValidUserReq {
  string username = 1;
  // string email = 2;
  string password = 3;
}

message ValidUserRsp {
  bool ok = 1;
  bool is_exist = 2;
}

message GetUserReq { uint64 uid = 1; }

message GetUserRsp { user.UserInfo userinfo = 1; }

message UpdateUserReq { user.UserInfo userinfo = 1; }

message UpdateUserRsp { bool ok = 1; }

message HasUserReq {
  string username = 1;
  string email = 2;
}

message HasUserRsp { bool has = 1; }

service UserSvr {
  rpc create_user(CreateUserReq) returns (CreateUserRsp);

  rpc valid_user(ValidUserReq) returns (ValidUserRsp);

  rpc get_user(GetUserReq) returns (GetUserRsp);

  rpc update_user(UpdateUserReq) returns (UpdateUserRsp);

  rpc has_user(HasUserReq) returns (HasUserRsp);
}
